github pages setup

--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,6 @@ relative_links:
 include:
   - CONTRIBUTING.md
   - README.md
-  - LICENSE.md
-  - COPYING.md
-  - CODE_OF_CONDUCT.md
-  - CONTRIBUTING.md
-  - ISSUE_TEMPLATE.md
-  - PULL_REQUEST_TEMPLATE.md
+  - Java9ModuleSystem.md
 
 theme: jekyll-theme-midnight
